--- a/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
+++ b/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
@@ -14,7 +14,7 @@
           <h6><span class="obrigatorio">*</span>Descrição</h6>
           <!--TODO Forma de input uppercase sem diretiva -->
           <input class="w-full" oninput="this.value = this.value.toUpperCase()" pInputText name="motivo" type="text"
-            [pKeyFilter]="regex.string" [(ngModel)]="newmotivo.descricao" #motivo="ngModel"
+            [pKeyFilter]="regex.stringNumber" [(ngModel)]="newmotivo.descricao" #motivo="ngModel"
             required minlength="3" />
           <app-message [control]="motivo" error="required" text="Informe a descrição"></app-message>
           <app-message [control]="motivo" error="minlength" text="Mínimo de {{
