--- a/src/app/pages/seguranca/login/login.component.html
+++ b/src/app/pages/seguranca/login/login.component.html
@@ -1,18 +1,29 @@
-
-<div class="flex col-12 justify-content-center mt-8">
-  <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
-    <div class="text-center mb-5">
-        <img [src]="" alt="Logo Icon Money" height="100" class="mb-3">
-    </div>
-    <div>
-        <label for="email1" class="block text-900 font-medium mb-2">E-mail</label>
-        <input id="email1" type="text" pInputText class="w-full mb-3">
-
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+      <div class="text-center mb-5">
+        <img src="assets/images/blocks/logos/hyper.svg" alt="Image" height="50" class="mb-3">
+        <div class="text-900 text-3xl font-medium mb-3">Bem vindo de volta</div>
+        <span class="text-600 font-medium line-height-3">Não tem uma conta?</span>
+        <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Crie Agora!</a>
+      </div>
+  
+      <div>
+        <label for="email1" class="block text-900 font-medium mb-2">Email</label>
+        <input id="email1" type="text" placeholder="Endereço Email" pInputText class="w-full mb-3" required>
+  
         <label for="password1" class="block text-900 font-medium mb-2">Senha</label>
-        <input id="password1" type="password" pInputText class="w-full mb-3">
-
-        <button pButton pRipple label="Entrar" (click)="logar()" iconPos="right" icon="pi pi-check" class="w-full"></button>
+        <input id="password1" type="password" placeholder="Senha" pInputText class="w-full mb-3" required>
+  
+        <div class="flex align-items-center justify-content-between mb-6">
+          <div class="flex align-items-center">
+            <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
+            <label for="rememberme1" class="text-900">Lembre-se</label>
+          </div>
+          <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Esqueceu a Senha?</a>
+        </div>
+  
+        <button pButton pRipple label="Login" icon="pi pi-user" class="w-full" routerLink="/motivos"></button>
+      </div>
     </div>
-</div>
-
-</div>
+  </div>
+  
