Componente Agendamento não finalizado

--- a/src/app/pages/clientes/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/pages/clientes/cadastro-cliente/cadastro-cliente.component.html
@@ -267,6 +267,7 @@
             pInputText
             name="complemento"
             type="text"
+            placeholder="Informe o complemento"
             [pKeyFilter]="regex.stringEspecial"
             [(ngModel)]="newcliente.complemento"
             #complemento="ngModel"
