--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 
 <router-outlet></router-outlet>
 
-<p-toast  click=(mostrarToast) position="bottom-right" styleClass="p-toast-message"></p-toast>
+<p-toast  click=(mostrarToast) position="bottom-right" styleClass="p-toast-message" life="500"></p-toast>
 
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "square-spin" [fullScreen] = "true"><p style="color: white" > Carregando... </p></ngx-spinner>
