--- a/src/app/pages/processos/lista-processos/lista-processos.component.html
+++ b/src/app/pages/processos/lista-processos/lista-processos.component.html
@@ -1,11 +1,11 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>ACOMPANHAMENTOS</h4>
+    <h4>PROCESSOS</h4>
     <div class="flex justify-content-between mb-2">
       <div class="flex justify-content-start mb-2">
         <div>
           <button pButton pRipple type="button" class="p-button-raised p-button-warning" icon="pi pi-plus"
-            pTooltip="Novo" tooltipPosition="top" routerLink="/acompanhamentos/novo"></button>
+            pTooltip="Novo" tooltipPosition="top" routerLink="/processos/novo"></button>
         </div>
         <div>
           <button pButton pRipple type="button" class="p-button-raised p-button-warning ml-2" pTooltip="Atualizar"
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <p-table #tabela [value]="newacompanhamento" [columns]="cols" [globalFilterFields]="cols"
+    <p-table #tabela [value]="newprocesso" [columns]="cols" [globalFilterFields]="cols"
       [rowsPerPageOptions]="rowsPerPageTable" selectionMode="single" [showCurrentPageReport]="true" [rows]="10"
       styleClass="p-datatable-striped p-datatable-gridlines" [scrollable]="true"
       [currentPageReportTemplate]="messagePageReport">
