--- a/src/app/pages/seguranca/login/login.component.html
+++ b/src/app/pages/seguranca/login/login.component.html
@@ -1,10 +1,7 @@
 <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
     <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
       <div class="text-center mb-5">
-        <img src="assets/images/blocks/logos/hyper.svg" alt="Image" height="50" class="mb-3">
-        <div class="text-900 text-3xl font-medium mb-3">Bem vindo de volta</div>
-        <span class="text-600 font-medium line-height-3">Não tem uma conta?</span>
-        <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Crie Agora!</a>
+        <div class="text-900 text-3xl font-medium mb-3">NPJ</div>
       </div>
   
       <div>
@@ -15,14 +12,7 @@
         <input id="password1" type="password" placeholder="Senha" pInputText class="w-full mb-3" required>
   
         <div class="flex align-items-center justify-content-between mb-6">
-          <div class="flex align-items-center">
-            <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
-            <label for="rememberme1" class="text-900">Lembre-se</label>
-          </div>
-          <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Esqueceu a Senha?</a>
-        </div>
-  
-        <button pButton pRipple label="Login" icon="pi pi-user" class="w-full" routerLink="/motivos"></button>
+        <button pButton pRipple label="entrada" icon="pi pi-user" class="w-full" routerLink="/motivos"></button>
       </div>
     </div>
   </div>
