--- a/src/app/core/layout/navbar/navbar.component.css
+++ b/src/app/core/layout/navbar/navbar.component.css
@@ -13,7 +13,8 @@
     right: 0;
     font-size: 16px;
     width: 100%;
-    padding: 25px;
+    padding: 15px;
     z-index: 998;
     background-color: #f59e0b;
+    box-shadow: 0.1875rem 0.125rem 1rem -0.0625rem rgba(81, 82, 81, 0.72);
 }
