--- a/src/app/pages/agendamentos/lista-agendamentos/lista-agendamentos.component.html
+++ b/src/app/pages/agendamentos/lista-agendamentos/lista-agendamentos.component.html
@@ -12,7 +12,7 @@
               icon="pi pi-plus"
               pTooltip="Novo"
               tooltipPosition="top"
-              routerLink="/agendamento/novo"
+              routerLink="/agendamentos/novo"
             ></button>
           </div>
           <div>
