--- a/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
+++ b/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
@@ -1,6 +1,6 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>{{ editando ? 'Edição De' : 'Cadastro De'}} Motivos</h4>
+    <h4>{{ editando ? 'Edição de' : 'Cadastro de'}} Motivos</h4>
     <div class="flex justify-content-start mb-2">
       <div>
         <button pButton pRipple type="button" class="p-button-raised p-button-warning" icon="pi pi-caret-left"
